src/assets/scss/_alpha.scss
$alpha-color: #fb321c;

// $hero-height: 60vh;
$body-font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
$header-font-family: 'Josefin Sans';


.cn-alpha {
    position: relative;
    font-family: $body-font-family;

    h1, h2 {
      font-family: $header-font-family;
      color: $alpha-color;
      text-align: center;
    }

    &-button {
      background-color: $alpha-color;
      font-size: 2rem;
    }

    .logo {
      position: relative;
      top: 5rem;
      left: 5%;
    }

    .content {
      position: relative;
      top: 5rem;
      text-align: center;
      font-family: $header-font-family;
      padding-bottom: 5rem;

      span {
        font-size: 2rem;
        font-weight: bolder;
      }

      h2 {
        font-weight: bold;
        font-size: 3rem;
        color: $alpha-color;
      }

      h1 {
        color: $alpha-color;
        font-weight: bold;
        font-size: 6rem;
      }
    }

    &-header {
      .button {
        background-color: $alpha-color;
      }
    }

    &-question {
      text-align: center;
      background-color: $alpha-color;
      width: 100%;
      h1 {
        font-size: 3rem;
        color: $white;
      }
    }

    &-video {
      margin-left: auto;
      margin-right: auto;
      padding: 2rem;
      border: 4px solid $alpha-color;
      
      video {
        width: 100%;
      }
    }

  }
  .marketing-site-three-up {

    h2 {
      font-size: 2.5rem;
      font-weight: bolder;
    }

    .fa {
      color: $alpha-color;
    }
  }
  .marketing-site-content-section {
    border: 4px solid $alpha-color;

  .marketing-site-content-section-block {


    h3 {
      font-size: 2rem;
      font-weight: bold;
      color: $alpha-color;
    }
    p {
      font-size: 1.5rem;
    }
  }
}

  .contact-us-section {
    .contact-us-section-left {
      border-color: $alpha-color;
    }

    h1 {
      text-align: center;
      font-weight: bold;
      font-size: 5rem;
      color: $alpha-color;
    }

    h2 {
      font-weight: bold;
      font-size: 2rem;
    }

    ul {
      list-style-type: none;
      li {
        font-size: 1rem;
      }
    }

    label>span {
      font-weight: bold;
      &::after {
        font-style: italic;
        content: ' - Required';
      }

    }

    .cn-alpha-button {
      font-weight: bold;
      font-size: 1rem;
      padding: 1rem 2rem;
      background-color: $alpha-color;
    }
    
  }

